# droras

./: .gitignore  0_log_upload.sh  LICENSE  README.md  data-run.sh  droras.service.example  heat_list.py  main.py  pyproject.toml  requests.txt  requirements.txt  run.sh  run_api.sh
front/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
front/src/: App.tsx  main.tsx
jdl_lib/: config.py  convert_heatlist.py  event_logger.py  jdl-main-b84eea70963d.json  jdl_api.py  race_manager.py  start_log.py  webapp.py
log/: heat_list.csv  heat_start.csv  heat_start.csv.2023-06-15
nuxt/dronas-admin/: README.md  package-lock.json  package.json
nuxt/droras-admin/: README.md  nuxt.config.js  package-lock.json  package.json
nuxt/droras-pilots/: .eslintrc.js  .firebaserc  README.md  cors.json  fb_deploy.sh  nuxt.config.js  package-lock.json  package.json  pnpm-lock.yaml
src/droras/: __init__.py  __main__.py  config.py  convert_heatlist.py  device.py  event_logger.py  race_manager.py  server.py
static/: 200.html  404.html  fb.html  index.html  pilots.csv  pilots.json  round6.json  top.html
static/_nuxt/: 0246715.js  0451a53.js  05b66d5.js  072d842.js  090c31d.js  09c95e4.js  0b31770.js  0b3fe2b.js  0b7314b.js  0bd86a5.js  13c466a.js  1495cb5.js  180db73.js  18e983b.js  194d8f0.js  1ad52e7.js  269ddea.js  2c49343.js  31fc668.js  33a51ae.js  34aa6f8.js  402b4da.js  424d6c0.js  46609a2.js  47c3b67.js  49d9de5.js  4a47ac9.js  4c6b9bd.js  4f0e8c3.js  4fa672a.js  5355938.js  592c859.js  5ba41e9.js  60e28bd.js  61702b0.js  62afd50.js  (+52 more)
templates/: index.html  view.html
(+84 files in other folders)
